--- a/styles/light.css
+++ b/styles/light.css
@@ -9,4 +9,8 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --bg-image: url("/images/cover-image-light.png");
+  --bg-color: #FFC2E6;
+  --accent-color: #FF8DCB;
+  --title-color: #FFC2E6;
 }
