--- a/styles/style.css
+++ b/styles/style.css
@@ -2,4 +2,192 @@
 
 .page {
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+  background-image: var(--bg-image);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-color: var(--bg-color);
+}
+
+.header {
+  block-size: 100vh;
+  min-block-size: 668px;
+  display: grid;
+  grid-template-rows: 1fr min-content 1fr;
+  padding: 10px;
+  gap: 55px;
+  position: relative;
+}
+
+.header__theme-menu {
+  justify-self: end;
+  align-self: end;
+  margin-block-end: 12px;
+}
+
+
+.decor {
+  position: absolute;
+  text-transform: uppercase;
+  top: 12px;
+  right: 20px;
+  color: var(--accent-color);
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-family: var(--font);
+  font-size: var(--text-size);
+  line-height: 20px;
+}
+
+.decor::after {
+  display: block;
+  content: " ";
+  block-size: 9px;
+  inline-size: 9px;
+  background-color: var(--accent-color);
+  border-radius: 50%;
+  filter: drop-shadow(0px 0px 4px var(--accent-color));
+}
+
+.decorated-zone::after {
+  position: absolute;
+  content: " ";
+  inline-size: 25px;
+  block-size: 25px;
+  border-inline-end: solid 1px var(--accent-color);
+  border-block-start: solid 1px var(--accent-color);
+  top: 10px;
+  right: 10px;
+}
+
+.decorated-zone::before {
+  position: absolute;
+  content: " ";
+  inline-size: 25px;
+  block-size: 25px;
+  border-inline-start: solid 1px var(--accent-color);
+  border-block-end: solid 1px var(--accent-color);
+  bottom: 10px;
+  left: 10px;
+}
+
+.header__theme-menu-list {
+  display: grid;
+  row-gap: 10px;
+}
+
+.header__theme-menu-button {
+  font-family: var(--font);
+  color: var(--accent-color);
+  text-transform: lowercase;
+  font-size: var(--text-size);
+  inline-size: 70px;
+  block-size: 26px;
+  background-color: transparent;
+  box-sizing: border-box;
+  border: none;
+}
+
+.header__theme-menu-button:hover {
+  border: solid 1px var(--accent-color);
+}
+
+.header__theme-menu-button:focus-visible {
+  outline: none;
+  border-block-end: solid 1px var(--accent-color);
+}
+
+
+.header__theme-menu-button_active {
+  border: solid 1px var(--border-but-color);
+}
+
+.title {
+  color: var(--title-color);
+  font-size: var(--title-size);
+  text-shadow: 4px 4px 0 var(--accent-color);
+  font-family: var(--font);
+  line-height: 82.5%;
+}
+
+.content {
+  margin-block: 40px;
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+
+.content__section {
+  padding-inline-end: 10px;
+  padding-inline-start: 10px;
+}
+
+.title__decor {
+  color: var(--title-decor);
+  background-color: var(--accent-color);
+  font-family: var(--font);
+  font-size: var(--text-size);
+  font-weight: var(--text-style);
+  height: fit-content;
+  line-height: 130%;
+}
+
+.content__title {
+  color: var(--accent-color);
+  font-family: var(--font);
+  font-size: var(--text-size);
+  line-height: 130%;
+  margin-block-end: 20px;
+}
+
+.content__block {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.subblock { 
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.subtitle {
+}
+
+.title__advice {
+  font-weight: 400;
+}
+
+.content__text {
+  color: var(--text-color);
+  font-family: var(--font);
+  font-size: var(--text-size);
+  line-height: 130%;
+  font-weight: 400;
+}
+
+.image__title { 
+  margin-block-end: 10px;
+}
+
+.container__image {
+  display: grid;
+  gap: 10px;
+}
+
+.content__image {
+  object-fit: cover;
+  inline-size: 100%;
+}
+
+.footer {
+  block-size: 100vh;
+  min-block-size: 668px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
 }
