--- a/styles/variables.css
+++ b/styles/variables.css
@@ -10,7 +10,9 @@
   --bg-image: url("/images/cover-image-dark.png");
   --bg-color: #000028;
   --accent-color: #FF0070;
+  --accent-color-hover: rgba(255, 0, 112, 0.4);
   --title-color: #DB00FF;
   --title-decor: #000028;
   --text-color: #F1B2CE;
+  --rec: flex;
 }
