--- a/styles/light.css
+++ b/styles/light.css
@@ -10,8 +10,18 @@
     чем стили в медиазапросе предпочтений пользователя
   */
   --bg-image: url("/images/cover-image-light.png");
-  --bg-color: #FFC2E6;
-  --accent-color: #FF8DCB;
-  --title-color: #FFC2E6;
+  --bg-color: #ffc2e6;
+  --accent-color: #ff8dcb;
+  --title-color: #ffc2e6;
   --rec: none;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --bg-image: url("/images/cover-image-light.png");
+    --bg-color: #ffc2e6;
+    --accent-color: #ff8dcb;
+    --title-color: #ffc2e6;
+    --rec: none;
+  }
 }
