--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,10 +9,13 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-  --bg-image: url("/images/cover-image-dark.png");
+  --bg-image: url("../images/cover-image-dark.png");
   --bg-color: #000028;
   --accent-color: #FF0070;
   --title-color: #DB00FF;
   --title-decor: #000028;
+  --text-color: #F1B2CE;
+  --accent-color-hover: rgba(255, 0, 112, 0.4);
+  --bt-color: #FF0070;
   --rec: flex;
 }
