--- a/styles/light.css
+++ b/styles/light.css
@@ -9,19 +9,25 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-  --bg-image: url("/images/cover-image-light.png");
+  --bg-image: url("../images/cover-image-light.png");
   --bg-color: #ffc2e6;
   --accent-color: #ff8dcb;
+  --bt-color: #353430;
   --title-color: #ffc2e6;
+  --text-color: #353430;
+  --accent-color-hover: rgba(50, 49, 45, 0.4);
   --rec: none;
 }
 
 @media (prefers-color-scheme: light) {
   :root {
-    --bg-image: url("/images/cover-image-light.png");
+    --bg-image: url("../images/cover-image-light.png");
     --bg-color: #ffc2e6;
     --accent-color: #ff8dcb;
     --title-color: #ffc2e6;
+    --bt-color: #353430;
     --rec: none;
+    --text-color: #353430;
+    --accent-color-hover: rgba(50, 49, 45, 0.4);
 }
 }
