--- a/styles/style.css
+++ b/styles/style.css
@@ -31,15 +31,15 @@
 .decor {
   position: absolute;
   text-transform: uppercase;
-  top: 12px;
-  right: 20px;
-  color: var(--accent-color);
+  top: 13px;
+  right: 19px;
+  color: var(--bt-color);
   display: var(--rec);
   align-items: center;
-  gap: 10px;
+  gap: 11px;
   font-family: var(--font);
   font-size: var(--text-size);
-  line-height: 20px;
+  line-height: 18px;
 }
 
 .decor::after {
@@ -47,9 +47,9 @@
   content: " ";
   block-size: 9px;
   inline-size: 9px;
-  background-color: var(--accent-color);
+  background-color: var(--bt-color);
   border-radius: 50%;
-  filter: drop-shadow(0px 0px 4px var(--accent-color));
+  box-shadow: 0 0 4px 2px #ff0070;
 }
 
 .decorated-zone::after {
@@ -57,8 +57,8 @@
   content: " ";
   inline-size: 25px;
   block-size: 25px;
-  border-inline-end: solid 1px var(--accent-color);
-  border-block-start: solid 1px var(--accent-color);
+  border-inline-end: solid 1px var(--bt-color);
+  border-block-start: solid 1px var(--bt-color);
   top: 10px;
   right: 10px;
 }
@@ -68,8 +68,8 @@
   content: " ";
   inline-size: 25px;
   block-size: 25px;
-  border-inline-start: solid 1px var(--accent-color);
-  border-block-end: solid 1px var(--accent-color);
+  border-inline-start: solid 1px var(--bt-color);
+  border-block-end: solid 1px var(--bt-color);
   bottom: 10px;
   left: 10px;
 }
@@ -82,7 +82,7 @@
 
 .header__theme-menu-button {
   font-family: var(--font);
-  color: var(--accent-color);
+  color: var(--bt-color);
   text-transform: lowercase;
   font-size: var(--text-size);
   inline-size: 70px;
@@ -90,6 +90,7 @@
   background-color: transparent;
   border: none;
   line-height: 100%;
+  padding-block-end: 5px;
 }
 
 .header__theme-menu-button:hover {
@@ -99,11 +100,11 @@
 
 .header__theme-menu-button:focus-visible {
   outline: none;
-  border-block-end: solid 1px var(--accent-color);
+  border-block-end: solid 1px var(--bt-color);
 }
 
 .header__theme-menu-button_active {
-  border: solid 1px var(--border-but-color);
+  border: solid 1px var(--bt-color);
   pointer-events: none;
 }
 
@@ -150,7 +151,7 @@
 
 .content__block {
   display: grid;
-  grid-template-columns: repeat(auto-fit 1fr);
+  grid-template-columns: repeat(1, 1fr);
   gap: 20px;
 }
 
@@ -178,7 +179,7 @@
 }
 
 .accent__link:hover {
-  text-decoration: underline;
+  border-bottom: 1px solid var(--text-color);
 }
 
 .accent__link:focus-visible {
@@ -219,14 +220,12 @@
 
   .header {
     padding: 20px;
-    block-size: 100vh;
     min-block-size: 1024px;
   }
 
   .header__decor {
     display: block;
     inline-size: 364px;
-    block-size: 117px;
   }
 
   .title__header {
@@ -258,7 +257,7 @@
     padding-inline-end: 20px;
   }
 
-  .column {
+  .why {
     display: grid;
     grid-template-columns: 1fr 2fr;
     gap: 20px;
@@ -266,6 +265,12 @@
 
   .answer {
     max-inline-size: 236px;
+  }
+
+  .advice {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 20px;
   }
 
   .image__title {
@@ -279,12 +284,9 @@
       "tape books ice-cream"
       "tape street street";
     gap: 20px;
-    object-fit: cover;
-    max-block-size: calc(100vw + 23px);
   }
 
   .content__image {
-    object-fit: cover;
     block-size: 100%;
   }
 
@@ -311,10 +313,9 @@
 
 @media (min-width: 1024px) {
   .header {
-    block-size: 100vh;
     min-block-size: 768px;
   }
-  
+
   .header__theme-menu {
     justify-self: center;
     align-self: start;
@@ -327,10 +328,10 @@
 
   .header__decor {
     inline-size: 491px;
-    block-size: 71px;
   }
 
-  .column {
+  .why,
+  .advice {
     gap: 10px;
   }
 
