--- a/styles/variables.css
+++ b/styles/variables.css
@@ -7,12 +7,19 @@
   --font: IBM Plex Mono;
   --text-size: 18px;
   --text-style: 700;
-  --bg-image: url("/images/cover-image-dark.png");
+  --bg-image: url("../images/cover-image-dark.png");
   --bg-color: #000028;
   --accent-color: #FF0070;
   --accent-color-hover: rgba(255, 0, 112, 0.4);
   --title-color: #DB00FF;
   --title-decor: #000028;
   --text-color: #F1B2CE;
+  --bt-color: #FF0070;
   --rec: flex;
+}
+
+@media (min-width: 768px) {
+  :root {
+    --title-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
 }
