--- a/styles/dark.css
+++ b/styles/dark.css
@@ -13,6 +13,7 @@
   --bg-color: #000028;
   --accent-color: #FF0070;
   --title-color: #DB00FF;
+  --content-title-color: #FF0070;
   --title-decor: #000028;
   --text-color: #F1B2CE;
   --accent-color-hover: rgba(255, 0, 112, 0.4);
