--- a/styles/light.css
+++ b/styles/light.css
@@ -15,6 +15,7 @@
   --bt-color: #353430;
   --title-color: #ffc2e6;
   --text-color: #353430;
+  --subtitle-color: #353430;
   --accent-color-hover: rgba(50, 49, 45, 0.4);
   --rec: none;
 }
@@ -29,5 +30,6 @@
     --rec: none;
     --text-color: #353430;
     --accent-color-hover: rgba(50, 49, 45, 0.4);
+    --content-title-color: #353430;
 }
 }
