--- a/styles/variables.css
+++ b/styles/variables.css
@@ -13,6 +13,7 @@
   --accent-color-hover: rgba(255, 0, 112, 0.4);
   --title-color: #DB00FF;
   --title-decor: #000028;
+  --content-title-color: #FF0070;
   --text-color: #F1B2CE;
   --bt-color: #FF0070;
   --rec: flex;
